--- a/Screens/LoginScreen/LoginScreen.css
+++ b/Screens/LoginScreen/LoginScreen.css
@@ -1,1 +1,91 @@
-body
+h1{
+    text-align: center;
+    color: #3b3c40;
+    font-size: xx-large;
+}
+
+
+body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f4efe9; 
+    color: #333;
+}
+
+
+form {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 40px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+}
+
+
+#login {
+    text-align: center;
+    font-size: 32px;
+    color: #5c6d70; 
+}
+
+
+label {
+    
+    margin-top: 20px;
+    font-weight: bold;
+    color: #7a9e9f; 
+} 
+
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px 12px;
+    margin-top: 8px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
+    font-size: 16px;
+} 
+
+
+input:focus {
+    outline: none;
+    border-color: #7a9e9f;
+    box-shadow: 0 0 5px rgba(122, 158, 159, 0.5);
+}
+
+
+.loginButton{
+    width: 250px;
+    background-color: #7a9e9f;
+    color: white;
+    font-size: 25px;
+    border: none;
+    border-bottom: 600px;
+    border-radius: 30px;
+    cursor: pointer;
+    margin-left: 500px;
+    margin-bottom: 70px;
+    padding: 12px;
+    
+}
+
+button:hover {
+    background-color: #5c6d70;
+} 
+
+.RegisterButton{
+    width: 250px;
+    background-color: #7a9e9f;
+    color: white;
+    font-size: 25px;
+    border: none;
+    border-bottom: 500px;
+    border-radius: 30px;
+    cursor: pointer;
+    margin-left: 500px;
+    margin-bottom: 70px;
+    padding: 12px;
+}
