--- a/main.css
+++ b/main.css
@@ -75,3 +75,19 @@ main {
 .loginButton:hover {
     background-color: #0056b3;
 }
+
+.RegisterButton{
+    position: absolute;
+    top: 70%;
+    left: 5%;
+    color: white;
+    background-color:  #478f5e;
+    border: none;
+    padding: 24px 40px;
+    font-size: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 2;
+    transition: background-color 0.3s ease;
+    border-width: 40px;
+}
