--- a/Screens/RegisterScreen/RegisterScreen.css
+++ b/Screens/RegisterScreen/RegisterScreen.css
@@ -39,7 +39,7 @@ input[type="text"] {
     width: 70%;
     padding: 10px 12px;
     margin-top: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 8px;
     box-sizing: border-box;
     font-size: 16px;
@@ -50,7 +50,7 @@ input[type="password"]{
     padding: 10px 10px;
     margin-top: 40px;
     margin-left: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 8px;
     box-sizing: border-box;
     font-size: 16px;
