--- a/Screens/RegisterScreen/RegisterScreen.css
+++ b/Screens/RegisterScreen/RegisterScreen.css
@@ -25,12 +25,12 @@ form{
 }
 
 
-#name{
+.Name{
     color: 	#f4efe9;
     padding-left: 25px;
 }
 
-#password{
+.password{
     color: 	#f4efe9;
     padding-left: 3px;
 }
@@ -54,6 +54,7 @@ input[type="password"]{
     border-radius: 8px;
     box-sizing: border-box;
     font-size: 16px;
+    color: rgb(0, 0, 0);
 }
 
 .createAccount{
