--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #163823;
+    height: 120vh; /* Adjusted to 200vh for better visibility of the background image */
 }
 
 .topbar {
@@ -42,17 +43,17 @@ main {
     position: relative;
     width: 100%;
     height: 100vh;
-    margin-top: 60px; /* to account for fixed header */
+    margin-top: 60px; 
     overflow: hidden;
 }
 
 
 #imgBack {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%; 
     object-fit: cover;
     z-index: 1;
 }
@@ -91,4 +92,35 @@ main {
     z-index: 2;
     transition: background-color 0.3s ease;
     border-width: 40px;
+}
+
+.bottom-bar {
+    background-color: #163823;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 8%;
+    border-top: 2px solid #1d8e45;
+}
+
+.bottom-bar p {
+    margin: 0;
+    font-size: 0.9rem;
+}
+
+.footer-links {
+    margin-top: 0.5rem;
+}
+
+.footer-links a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 1rem;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
 }
