--- a/Screens/AssigmentScreen/Assigment.css
+++ b/Screens/AssigmentScreen/Assigment.css
@@ -2,11 +2,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
+    background-color: #163823;
 }
 
 .topbar {
-    background-color: #2c3e50;
+    background-color: #478f5e;
     color: white;
     padding: 1rem 2rem;
     display: flex;
@@ -49,7 +49,7 @@ body {
 }
 
 .assignments-container h1 {
-    color: #2c3e50;
+    color: white;
     margin-bottom: 1.5rem;
 }
 
@@ -175,7 +175,7 @@ body {
 }
 
 .bottom-bar {
-    background-color: #2c3e50;
+    background-color: #478f5e;
     color: white;
     padding: 1rem 2rem;
     display: flex;
